--- a/scss/modules/menu/_file.scss
+++ b/scss/modules/menu/_file.scss
@@ -3,7 +3,7 @@
 
   ul li.highlighted,
   &:not(.keyboard_active) ul li:hover:not(.disabled) {
-    background: $color-shade-darkest;
+    background: $color-shade-dark;
 
     > a {
       color: $base-link-color-active;
