--- a/scss/main.scss
+++ b/scss/main.scss
@@ -60,6 +60,7 @@
   @import "modules/modals/omnibox";
   @import "modules/modals/share";
   @import "modules/modals/quick-search";
+  @import "modules/modals/call";
 
   @import "modules/tooltips/base";
   @import "modules/tooltips/coachmarks";
