--- a/scss/modules/modals/_quick-search.scss
+++ b/scss/modules/modals/_quick-search.scss
@@ -31,8 +31,15 @@ ts-jumper {
     li {
       color: $base-font-color;
 
+      .channel_name,
+      .member_real_name,
+      .member_username,
+      .team_username {
+        color: $color-highlight;
+      }
+
       .channel_not_member,
-      .match_score,
+      .team_username,
       .member_real_name + .member_username,
       .member_username + .member_real_name,
       ts-icon {
