--- a/scss/modules/modals/_base.scss
+++ b/scss/modules/modals/_base.scss
@@ -15,9 +15,9 @@
 }
 
 .modal-footer {
-  background: padding-box $color-shade-darkest;
-  border-top: 1px solid $color-shade-light;
-  box-shadow: inset 0 1px 0 $color-shadow-dark;
+  background: padding-box $color-base;
+  border-top: 1px solid transparent;
+  box-shadow: none;
 }
 
 .modal-header {
