--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -11,7 +11,7 @@
     &.group.active a.group_name,
     &.member.active a.im_name {
       background: $color-shade-light;
-      color: $base-font-color;
+      color: $base-font-color !important;
     }
   }
 
@@ -20,7 +20,7 @@
     &.group.active .unread_highlight,
     &.member.active .unread_highlight {
       background: $color-base;
-      color: $base-font-color;
+      color: $base-font-color !important;
     }
   }
 }
@@ -86,11 +86,11 @@
 
       &.unread {
         &:not(.muted_channel) a {
-          color: $base-font-color;
+          color: lighten($base-font-color, 6%) !important;
         }
 
         .prefix {
-          color: $base-font-color;
+          color: $base-font-color !important;
         }
       }
     }
@@ -119,6 +119,23 @@
   &:hover {
     border-bottom: 1px solid $base-link-color-active;
     color: $base-link-color-active !important;
+  }
+}
+
+#channels_scroller.show_which_channel_is_active ul li.active a {
+  &.channel_name,
+  &.group_name,
+  &.im_name,
+  &.mpim_name {
+    background: $color-base;
+    color: $base-font-color;
+  }
+
+  &.channel_name,
+  &.group_name {
+    .prefix {
+      color: $color-highlight;
+    }
   }
 }
 
