--- a/css/variants/arc-dark.css
+++ b/css/variants/arc-dark.css
@@ -1,6 +1,4 @@
-@-moz-document regexp("https://[^./]*\\.slack\\.com/.*") { @keyframes highlight_fade { from { background-color: #4b5160; }
-    to { background-color: #353944; } }
-  body { background: #404552; color: #d3dae3; }
+@-moz-document regexp("https://[^./]*\\.slack\\.com/.*") { body { background: #404552; color: #d3dae3; }
   a { color: #d3dae3; }
   a:link, a:visited { color: #d3dae3; }
   a:hover, a:active, a:focus { color: #d3dae3; }
@@ -72,6 +70,7 @@
   #quick_switcher_label { color: #d3dae3; }
   .monkey_scroll_bar { background: #4b5160; }
   .monkey_scroll_handle_inner { background: #565d6f; border: 1px solid #62697d; }
+  .monkey_scroll_bar_native_scrollbar_shim { background: transparent; }
   #client-ui .monkey_scroll_bar { background: #4b5160; }
   #client-ui .monkey_scroll_handle_inner { background: #565d6f; border: 3px solid #62697d; }
   #monkey_scroll_wrapper_for_channels_scroller .monkey_scroll_bar { background: #4b5160; }
@@ -121,9 +120,9 @@
   .btn.btn_border { border: 2px solid #4b5160; }
   .btn-primary { background-color: #4b5160; background-image: linear-gradient(to bottom, #565d6f, #4b5160); color: #d3dae3; }
   .btn-primary.active, .btn-primary.disabled, .btn-primary:active, .btn-primary:focus, .btn-primary:hover, .btn-primary[disabled] { background-color: #565d6f; color: #d3dae3; }
-  .btn-link { color: #d3dae3; }
-  .btn-link:focus, .btn-link:hover { color: #d3dae3; }
-  .btn-link[disabled]:focus, .btn-link[disabled]:hover { color: #d3dae3; }
+  .btn_link, .btn-link { color: #d3dae3; }
+  .btn_link:focus, .btn_link:hover, .btn-link:focus, .btn-link:hover { color: #d3dae3; }
+  .btn_link[disabled]:focus, .btn_link[disabled]:hover, .btn-link[disabled]:focus, .btn-link[disabled]:hover { color: #d3dae3; }
   .btn_info { background: #565d6f !important; }
   .btn_outline { background: #404552; color: #d3dae3 !important; }
   .btn_outline::after { border: 1px solid #4b5160; }
@@ -194,6 +193,7 @@
   #message_edit_form.offline #message-input, #message_edit_form.offline #primary_file_button, #messages-input-container.offline #message-input, #messages-input-container.offline #primary_file_button { background-color: #353944 !important; }
   #message_edit_form.offline #primary_file_button, #messages-input-container.offline #primary_file_button { border-color: #4b5160; color: #d3dae3; }
   #msg_form.focus #msg_input, #msg_form.focus #primary_file_button:not(:hover):not(.active) { border-color: #353944; }
+  #msg_form #msg_input { background: padding-box #565d6f; border-color: #4b5160; border-left: 0; color: #d3dae3; }
   #msg_input { background: #565d6f; border-color: #4b5160; color: #d3dae3; }
   #msg_input:focus { border-color: #353944; }
   #msg_input:focus + #primary_file_button:not(:hover):not(.active) { border-color: #353944; }
@@ -209,6 +209,7 @@
   #typing_text { color: #d3dae3; }
   #notification_bar.wide #typing_text.overflow_ellipsis { -webkit-filter: none; filter: none; }
   #special_formatting_text { color: #d3dae3; }
+  #msg_form .emo_menu, #message_edit_form .emo_menu, .inline_message_input_container .emo_menu { color: rgba(211, 218, 227, 0.35); }
   .ts_toggle .ts_toggle_button { background: #2a2d35; color: #d3dae3; }
   .ts_toggle .ts_toggle_button .ts_toggle_handle { background: #353944; }
   .ts_toggle .ts_toggle_secondary_label { color: #d3dae3; }
@@ -244,7 +245,7 @@
   #team_menu.active, #team_menu:hover { background: #353944 !important; border-bottom-color: #353944 !important; }
   #team_menu.active i, #team_menu:hover i { color: #d3dae3; }
   #team_menu.active #current_user_name, #team_menu:hover #current_user_name { color: #d3dae3; }
-  #team_menu i { color: #d3dae3; }
+  #team_menu #team_menu_user, #team_menu i { color: #d3dae3; }
   #team_menu .presence .presence_icon { text-shadow: 0 1px 1px rgba(0, 0, 0, 0.15); }
   #team_menu .team_name_caret, #team_menu .notifications_menu_btn { color: #d3dae3 !important; }
   #team_header_user_name { color: #d3dae3; }
@@ -255,6 +256,7 @@
   #im-list li.member.active .presence.away, #starred-list li.member.active .presence.away { color: #d3dae3; text-shadow: 1px 1px rgba(0, 0, 0, 0.15); }
   .slack_menu_section::before { border-top: 1px solid #565d6f; }
   .slack_menu_header_secondary { color: #d3dae3; }
+  .slack_menu_download { background-color: #353944; }
   #menu.file_menu { box-shadow: 0 3px 8px rgba(0, 0, 0, 0.5); }
   #menu.file_menu ul li.highlighted, #menu.file_menu:not(.keyboard_active) ul li:hover:not(.disabled) { background: #353944; }
   #menu.file_menu ul li.highlighted > a, #menu.file_menu:not(.keyboard_active) ul li:hover:not(.disabled) > a { color: #d3dae3; }
@@ -502,8 +504,9 @@
   ts-message .action_hover_container a, ts-message .message_actions_container message_actions a { background: #404552; border-right: 1px solid #404552; color: #d3dae3; }
   ts-message .action_hover_container a:hover, ts-message .message_actions_container message_actions a:hover { color: #d3dae3; }
   ts-message .action_hover_container a.active, ts-message .action_hover_container a:active, ts-message .message_actions_container message_actions a.active, ts-message .message_actions_container message_actions a:active { background: #353944; color: #d3dae3; }
-  ts-message.selected { background: #404552; border-bottom: 6px solid #353944; border-top: 6px solid #353944; }
-  ts-message.selected:hover { background: #404552; }
+  ts-message.selected { background: #404552; }
+  ts-message.selected:not(.delete_mode) { background: #404552; }
+  ts-message.selected:hover { background: rgba(0, 0, 0, 0.15); }
   ts-message .meta { color: #d3dae3; }
   ts-message .meta.msg_inline_img_toggler .member, ts-message .meta.msg_inline_img_toggler .service_link, ts-message .meta.msg_inline_file_preview_toggler .member, ts-message .meta.msg_inline_file_preview_toggler .service_link { color: #d3dae3 !important; }
   ts-message .meta.msg_inline_img_toggler .ts_icon_dropbox, ts-message .meta.msg_inline_img_toggler a, ts-message .meta.msg_inline_file_preview_toggler .ts_icon_dropbox, ts-message .meta.msg_inline_file_preview_toggler a { color: #d3dae3 !important; }
@@ -606,11 +609,14 @@
   #messages_unread_status.quiet a { color: #d3dae3; }
   .clear_unread_messages { border-left: 1px solid rgba(0, 0, 0, 0.15); }
   #messages_container.has_reply_banners.has_top_messages_banner #reply_banners::after, #messages_container:not(.has_reply_banners).has_top_messages_banner::before, #messages_container.has_top_messages_banner::before { background: none; }
-  .attachment_group.has_container { border: 1px solid #353944; }
+  .attachment_group.has_container { background: #404552; border: 1px solid #353944; }
   .attachment_group.has_container .inline_attachment::after { background-color: #353944; }
+  .attachment_group.has_container.has_link:hover { border-bottom-color: #353944; border-left-color: #353944; border-right-color: #353944; box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15); }
   .attachment_group .media_caret { color: #d3dae3; }
   .attachment_group .attachment_source span { color: #d3dae3 !important; }
   .attachment_group .attachment_source .attachment_source_name + .attachment_author_name::before { color: #d3dae3; }
+  .attachment_group .inline_attachment.reply_broadcast + .attachment_rule { color: #d3dae3; }
+  .attachment_group .inline_attachment.reply_broadcast + .attachment_rule::after { border-bottom: 1px solid #353944; }
   .attachment_group .inline_attachment.message_unfurl .attachment_source .attachment_source_name a, .attachment_group .inline_attachment.message_unfurl .attachment_source .attachment_source_name span { color: #d3dae3; }
   .attachment_group .attachment_title a { color: #d3dae3; }
   .attachment_group .attachment_footer_text + .attachment_ts::before { color: #d3dae3; }
@@ -674,10 +680,32 @@
   .post_body ul.list.checklist li.checked { color: #d3dae3; }
   .post_body .message { background-color: #d3dae3; }
   .post_body code, .post_body pre { background: #353944; }
+  ts-message .reply_bar .reply_bar_caret, ts-message .reply_bar .view_conv_hover, ts-message .reply_bar .last_reply_at { color: #d3dae3; }
+  ts-message .reply_bar:hover { background: #404552; border-color: #2a2d35; }
+  #threads_msgs_scroller_div { background: #404552; }
+  #threads_msgs_scroller_div:not(.loading)::before { background: #404552; }
+  #threads_msgs_scroller_div.loading::before { color: #d3dae3; }
+  #threads_msgs_scroller_div .threads_caught_up_divider .divider_line { border-top: 1px solid #353944; }
+  #threads_msgs_scroller_div .threads_caught_up_divider .divider_label { background: #565d6f; color: #d3dae3; }
+  #threads_view_banner.messages_banner { background: #353944; }
+  #threads_view_banner.messages_banner:hover { background: #565d6f; }
+  #threads_view_banner.messages_banner:hover .clear_unread_messages { background: #565d6f; }
+  #threads_msgs.new_banner_is_showing::before { background: #404552; }
+  ts-thread { background: #404552; }
+  ts-thread .reply_input_container .inline_message_input_container form textarea { border-color: #353944; }
+  ts-thread .reply_input_container .collapsed_input_placeholder, ts-thread .reply_input_container .join_channel_from_thread_container, ts-thread .reply_input_container .reply_limited_in_general { background: #353944; border-color: #353944; }
+  ts-thread .thread_messages { background: #353944; border-color: #353944; }
+  ts-thread ts-message.new_reply { background: #404552; }
+  ts-thread ts-message.new_reply:hover { background: #353944; }
+  ts-thread .thread_header .thread_channel_name a { color: #d3dae3; }
+  ts-thread .thread_header .thread_action_btns button { color: #d3dae3; }
+  ts-thread .new_reply_indicator .blue_dot { color: #bf360c; }
+  #convo_tab .thread_participants, ts-thread .thread_participants { color: #d3dae3; }
   pre { background: #2a2d35; border: 1px solid #353944; color: #d3dae3; }
   pre span.mention { padding: 2px 0 !important; }
   #page pre, body > pre { background: #2a2d35; color: #d3dae3 !important; }
   body > pre { background: #62697d; }
+  .special_formatting_quote .quote_bar { background-color: #565d6f; }
   code { background-color: #2a2d35; border: 1px solid #353944; color: #d3dae3; }
   .file_list_item.snippet .snippet_preview { background: #2a2d35; }
   .snippet_preview, .snippet_body { background: #2a2d35; }
@@ -784,6 +812,11 @@
   #flex_contents .flexpane_tab_bar li.active a { color: #d3dae3; }
   #flex_contents .help { border-top: 5px solid #2a2d35; color: #d3dae3; }
   #flex_contents i.callout { color: #d3dae3; }
+  .flexpane_redesign #flex_contents .heading { border-bottom: 0.0625rem solid #353944; }
+  .flexpane_redesign #flex_contents .heading_text { color: #d3dae3; }
+  .flexpane_redesign #flex_contents .close_flexpane { color: #d3dae3; }
+  .flexpane_redesign #flex_contents .close_flexpane:focus, .flexpane_redesign #flex_contents .close_flexpane:hover { color: #d3dae3; }
+  .flexbox_client.flexpane_redesign.flex_pane_showing #col_flex { border-left: 1px solid #353944; }
   .toolbar_container { background: #404552; border-bottom: 1px solid #2a2d35; color: #d3dae3; }
   .msg_right_link { color: #d3dae3; }
   #details_tab .heading { background: #404552; }
@@ -813,6 +846,14 @@
   .pinned_item .remove_pin:hover { color: #d3dae3; }
   .pinned_item .pinned_message_text .pin_truncate_fade { background: #404552; }
   .pinned_item.delete_mode { border-color: #bf360c !important; }
+  #convo_tab #convo_tab_btns .close_flexpane:focus, #convo_tab #convo_tab_btns .close_flexpane:hover { color: #d3dae3; }
+  #reply_container .inline_message_input_container .message_input div, #reply_container .inline_message_input_container textarea, .reply_input_container .inline_message_input_container .message_input div, .reply_input_container .inline_message_input_container textarea { border-color: #353944; }
+  #reply_container .inline_message_input_container .message_input div:active, #reply_container .inline_message_input_container .message_input div:focus, #reply_container .inline_message_input_container textarea:active, #reply_container .inline_message_input_container textarea:focus, .reply_input_container .inline_message_input_container .message_input div:active, .reply_input_container .inline_message_input_container .message_input div:focus, .reply_input_container .inline_message_input_container textarea:active, .reply_input_container .inline_message_input_container textarea:focus { border-color: #2a2d35; }
+  #reply_container .reply_broadcast_buttons_container .reply_broadcast_label_container, .reply_input_container .reply_broadcast_buttons_container .reply_broadcast_label_container { color: #d3dae3; }
+  #reply_container .reply_broadcast_buttons_container .reply_broadcast_label_container ts-icon.ts_icon_question_circle, .reply_input_container .reply_broadcast_buttons_container .reply_broadcast_label_container ts-icon.ts_icon_question_circle { color: #d3dae3; }
+  #reply_container .reply_limited_in_general, .reply_input_container .reply_limited_in_general { background: #404552; color: #d3dae3; }
+  #convo_container .convo_flexpane_divider { border-top: 1px solid #353944; color: #d3dae3; }
+  #convo_container .convo_flexpane_divider .reply_count { background: #404552; }
   .search_message_result { background: #404552; border-top: 2px solid #2a2d35; color: #d3dae3; }
   .search_message_result .search_message_result_meta { color: #d3dae3; }
   .search_message_result .search_message_result_meta a { color: #d3dae3; }
@@ -860,7 +901,9 @@
   .search_result_for_context::after { background: rgba(64, 69, 82, 0.1); }
   .extract_expand_icons, .experiment_search_limit_extracts .extract_expand_icons, .search_result_with_extract:hover .extract_expand_icons { color: #d3dae3; }
   .search_result_with_extract:hover .extract_expand_icons { color: #d3dae3; }
-  #mentions_options { background-color: #404552; border-top: 1px solid #2a2d35; color: #d3dae3; }
+  #mentions_options { background-color: #404552; border-top-color: #2a2d35; color: #d3dae3; }
+  #mentions_options.subheading.feature_message_replies_simple { background: #353944; border-bottom-color: #404552; }
+  #member_mentions.feature_message_replies_simple h3 a { color: #d3dae3; }
   #member_mentions_more_btn { background-color: #62697d !important; }
   .mention_day_container_div .day_divider::before { background: none; border-color: #353944; }
   .mention_rxn .mention_rxn_summary { color: #d3dae3; }
@@ -1125,6 +1168,7 @@
   #fs_modal.prefs_modal #prefs_themes #prefs_themes_customize .custom_theme_label .color_swatch { border: 1px solid #353944; }
   #fs_modal.prefs_modal #prefs_themes #prefs_themes_customize .colpick { background: #4b5160; border: 1px solid #353944; }
   #fs_modal.prefs_modal #prefs_themes::before { background: #bf360c; border-radius: 3px; content: "Light sidebar themes (e.g. Hoth) will break this Stylish theme."; display: block; margin-bottom: 6px; padding: 2px 4px 4px; width: 100%; }
+  #fs_modal.prefs_modal legend { color: #d3dae3; }
   .sidebar_menu_list_item { border: 0; color: #d3dae3; }
   .sidebar_menu_list_item.is_active { background-color: #2a2d35; color: #d3dae3; text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15); }
   .sidebar_menu_list_item:not(.is_active):hover { background-color: #353944; }
@@ -1219,7 +1263,7 @@
   .member_meta { color: #d3dae3; }
   .menu_member_user_details { background: #353944; border-bottom: 1px solid #565d6f; color: #d3dae3; }
   .menu_member_user_details .member_name { color: #d3dae3; }
-  .mini, .dull_grey, .flat_grey, .charcoal_grey, .ts_tip_tip .subtle_silver { color: #d3dae3 !important; }
+  .mini, .dull_grey, .flat_grey, .blue_link, .charcoal_grey, .ts_tip_tip .subtle_silver { color: #d3dae3 !important; }
   .sky_blue, .havana_blue, .plastic_grey, .indifferent_grey, .old_petunia_grey, .cloud_silver { color: #d3dae3 !important; }
   .clear_blue { color: #d3dae3 !important; }
   .candy_red_bg { background-color: #bf360c !important; }
@@ -1656,6 +1700,8 @@
   .two_factor_choice:hover { box-shadow: 0 0 1px 2px rgba(0, 0, 0, 0.15); }
   .two_factor_choice:hover .two_factor_link { color: #d3dae3; }
   #custom_emoji span.emoji-wrapper { background-color: #353944; }
+  @keyframes highlight_fade { from { background-color: #4b5160; }
+    to { background-color: #353944; } }
   #channel_specific_settings tr { border-top: 1px solid #565d6f; }
   #channel_specific_settings tr.channel_override_row.muted td { background: #353944; }
   #channel_specific_settings .extra_left_border { border-left: 3px solid #565d6f; }
