--- a/scss/modules/flexpane/_team.scss
+++ b/scss/modules/flexpane/_team.scss
@@ -37,10 +37,10 @@
     }
 
     a {
-      color: $base-link-color;
+      color: $base-link-color !important;
 
       &:hover {
-        color: $base-link-color-active;
+        color: $base-link-color-active !important;
       }
     }
 
